# reader3

./: .gitignore  CLAUDE.md  README.md  TESTING_GUIDE.md  epub_exporter.py  illustration_generator.py  inspect_book.py  package-lock.json  package.json  prototype.ipynb  pyproject.toml  pytest.ini  reader3.py  server.py  test_api.py  test_customization.js  test_customization.py  tts_generator.py
templates/: library.html  reader.html
tests/: README.md  REAL_API_TEST_RESULTS.md  __init__.py  conftest.py  test_example_usage.py  test_illustration_generator.py  test_real_api.py  test_save_real_images.py
tests/output/: README.md
